k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fed-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fed-backend
  template:
    metadata:
      labels:
        app: fed-backend
    spec:
      automountServiceAccountToken: false

      containers:
      - name: fed-backend
        image: sanjuhu/fed-checkup-backend:37

        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
            ephemeral-storage: "500Mi"   
          limits:
            memory: "256Mi"
            cpu: "500m"
            ephemeral-storage: "1Gi"
